# femto

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README.creole  README.md  TODO  autogen.sh  config.h.cmake.in  config.h.in  configure.ac  make_release.bash  make_release.sh
cmake/: FindAPR.cmake  FindAPXS.cmake
src/: CMakeLists.txt  Makefile.am
src/dcx_cc/: CMakeLists.txt  Makefile.am  README.txt  create_tuples_node.hh  dcover.cc  dcover.hh  dcover_test.cc  dcx.cc  dcx.hh  dcx_inmem.cc  dcx_inmem.hh  index_tool.cc  index_tool_support.h  index_tool_support_fasta.c  index_tool_support_files.c  index_tool_support_zero.c  merge_record.cc  merge_record.hh  naming_node.cc  naming_node.hh  scan_tool.cc  singleton_record.cc  singleton_record.hh  size_tool.cc  suffix_sort_inmem_test.cc  suffix_sort_test.cc  suffix_sort_test.sh  suffix_sort_tool.cc  test_dcx.cc  tuple_record.cc  tuple_record.hh  two_stage.cc  two_stage.hh
src/main/: CMakeLists.txt  Makefile.am  QUERY_FORMAT.txt  ast.c  ast.h  block_format.txt  block_storage.c  block_storage.h  bseq_test.c  bwt.h  bwt_creator.c  bwt_creator.h  bwt_ds_ssort.c  bwt_dump.c  bwt_format.txt  bwt_prepare.c  bwt_prepare.h  bwt_qsufsort.c  bwt_reader.c  bwt_reader.h  bwt_test.c  bwt_tool.c  bwt_writer.c  bwt_writer.h  bzlib_private.h  common_tool.c  compile_regexp.c  compile_regexp.h  compile_regexp_test.c  construct.c  construct.h  construct_tool.c  density.c  density.h  density_test.c  doc_info_dump.c  femto.c  femto.h  femto_internal.h  flatten_tool.c  (+47 more)
src/main_cc/: CMakeLists.txt  Makefile.am  extract_tool.cc  search_tool.cc
src/mod_femto/: CMakeLists.txt  Makefile.am  README  mod_femto.c
src/mod_femto/femto-js/: getpat.js  viz.css  viz.html  viz.js  vizgrid.css
src/mod_femto/femto-js/contrib/jquery-slickgrid/examples/: my-simple.html  my.html
src/mpi/: CMakeLists.txt  Makefile.am  hello_mpi.c  mpi_cp.cc  mpi_utils.cc  mpi_utils.hh  mpi_utils_test.cc  mpi_utils_test.sh
src/re2/: CMakeLists.txt  Makefile.am
src/re2/re2/: Makefile  libre2.symbols  libre2.symbols.darwin
src/scripts/: CMakeLists.txt  Makefile.am  README.txt  femto_do_cleanup_work.pl  femto_do_index.pl  femto_do_search.pl
src/ssort_chpl/: CachedAggregators.chpl  Checksum.chpl  CopyData.chpl  DifferenceCovers.chpl  ExtractUniqueKmers.chpl  FindUnique.chpl  Partitioning.chpl  README.md  SHA256Implementation.chpl  StackTrace.chpl  SuffixSimilarity.chpl  SuffixSort.chpl  SuffixSortImpl.chpl  TestCachedAggregators.chpl  TestDifferenceCovers.chpl  TestFindUnique.chpl  TestPartitioning.chpl  TestStackTrace.chpl  TestSuffixSimilarity.chpl  TestSuffixSort.chpl  TestUtility.chpl  Utility.chpl  build.bash  check.bash  fasta-checksum.py
src/test/: CMakeLists.txt  Makefile.am  test.pl
src/utils/: CMakeLists.txt  Makefile.am  bit_array.h  bit_array_test.c  bit_funcs.h  bit_funcs_test.c  bswap.h  buffer.c  buffer.h  buffer_funcs.h  buffer_test.c  cache.c  cache.h  cache_test.c  error.c  error.h  file_find.c  file_find.h  find_util.c  hashmap.c  hashmap.h  hashmap_test.c  iostats.c  iostats.h  is_netfs.c  mmap_test.c  page_utils.c  page_utils.h  page_utils_test.c  processors.c  processors.h  queue_map.c  queue_map.h  queue_map_test.c  random_read_test.c  stats_util.c  string_sort.c  string_sort.h  suffix_sort.c  suffix_sort.h  (+5 more)
src/utils_cc/: CMakeLists.txt  Makefile.am  aio_pipe.cc  aio_pipe.hh  bucket_sort.cc  bucket_sort.hh  bucket_sort_opt_infos.txt  bucket_sort_test.cc  bucket_trie.cc  compare_record.cc  compare_record.hh  compare_record_test.cc  compile_time.cc  compile_time.hh  compile_time_test.cc  criterion.hh  distribute_utils.cc  distribute_utils.hh  distributor_node.cc  distributor_node.hh  distributor_node_test.cc  error.hh  error_exception.cc  example_record.hh  file_find_node.cc  file_find_node.hh  file_pipe.cc  file_pipe.hh  file_pipe_context.cc  file_pipe_context.hh  form_runs_node.cc  form_runs_node.hh  form_runs_node_test.cc  io_pipe.cc  io_pipe.hh  kaio_pipe.cc  kaio_pipe.hh  merge_node.cc  merge_node.hh  merger.hh  (+27 more)
src/winnow/: README.txt  cluster_hashes.c  dump_hashes.c  hash.c  hash.h
