all-local:
	cd re2 && $(MAKE) $(AM_MAKEFLAGS) all
check-local:
	cd re2 && $(MAKE) $(AM_MAKEFLAGS) test
clean-local:
	cd re2 && $(MAKE) $(AM_MAKEFLAGS) clean

# Assuming the package knows how to install itself
#install-data-local:
#	cd re2 && $(MAKE) $(AM_MAKEFLAGS) install-data
#install-exec-local:
#	cd re2 && $(MAKE) $(AM_MAKEFLAGS) install-exec
#uninstall-local:
#	cd re2 && $(MAKE) $(AM_MAKEFLAGS) uninstall

# Distribute files from here.
EXTRA_DIST = re2

